--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.0'
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.0'
     // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
     implementation 'org.springframework:spring-webmvc:6.1.0'
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
     implementation 'org.springframework.boot:spring-boot-starter-web:3.2.0'
-
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
 
